--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1744,6 +1744,7 @@ a.product-title-brand-link{
     -webkit-box-flex: 0.9;
     -ms-flex-positive: 0.9;
     flex-grow: 0.9;
+    z-index:4;
 }
 .product-title-english{
     margin-left: auto;
@@ -2539,6 +2540,7 @@ o-btn{
     flex: 1;
     min-width: 290px;
     max-width: 300px;
+    z-index:4;
 }
 @media screen and (min-width: 1366px){
     .product-summary {
@@ -4763,7 +4765,7 @@ input.input-filter-toggle:checked + .c-ui-new-switch-slider {
 
 .magnifier-large {
     position: absolute;
-    z-index: 6;
+    z-index: 2;
 }
 
 .magnifier-preview {
@@ -4777,6 +4779,7 @@ input.input-filter-toggle:checked + .c-ui-new-switch-slider {
     background-color: white;
     box-shadow: 0 2px 6px 6px rgba(0,0,0,.1);
     border-radius: 1rem;
+    z-index: 5;
 }
 
 .magnifier-preview img {
